@@ -270,12 +270,13 @@ live link to PEP 258 here.</p>
 <col class="field-name" />
 <col class="field-body" />
 <tbody valign="top">
-<tr class="field"><th class="field-name">what:</th><td class="field-body">Field lists map field names to field bodies, like database
+<tr class="field"><th class="field-name">what:</th><td class="field-body"><p class="first">Field lists map field names to field bodies, like database
 records.  They are often part of an extension syntax.  They are
-an unambiguous variant of RFC 2822 fields.</td>
+an unambiguous variant of RFC 2822 fields.</p>
+</td>
 </tr>
 <tr class="field"><th class="field-name">how arg1 arg2:</th><td class="field-body"><p class="first">The field marker is a colon, the field name, and a colon.</p>
-<p class="last">The field body may contain one or more body elements, indented
+<p>The field body may contain one or more body elements, indented
 relative to the field marker.</p>
 </td>
 </tr>
